@@ -22,8 +22,11 @@
 
 [global]
    workgroup = RIVENDELL
+   security = user
    os level = 2
    time server = No
+   map to guest = Bad user
+   guest account = nobody
    unix extensions = Yes
    encrypt passwords = yes
    map to guest = Bad User
@@ -41,8 +44,10 @@
 [traffic_import]
    comment = Rivendell Traffic Imports
    path = /home/rd/traffic_import
+   guest only = yes
    browseable = yes
    read only = no
+   guest ok = yes
    directory mask = 0775
    create mask = 0664
    hide dot files = yes
@@ -52,8 +57,10 @@
 [traffic_export]
    comment = Rivendell Traffic Exports
    path = /home/rd/traffic_export
+   guest only = yes
    browseable = yes
    read only = no
+   guest ok = yes
    directory mask = 0775
    create mask = 0664
    hide dot files = yes
@@ -63,8 +70,10 @@
 [music_import]
    comment = Rivendell Music Imports
    path = /home/rd/music_import
+   guest only = yes
    browseable = yes
    read only = no
+   guest ok = yes
    directory mask = 0775
    create mask = 0664
    hide dot files = yes
@@ -74,8 +83,10 @@
 [music_export]
    comment = Rivendell Music Exports
    path = /home/rd/music_export
+   guest only = yes
    browseable = yes
    read only = no
+   guest ok = yes
    directory mask = 0775
    create mask = 0664
    hide dot files = yes
@@ -85,8 +96,10 @@
 [rd_xfer]
    comment = Rivendell Audio Transfer
    path = /home/rd/rd_xfer
+   guest only = yes
    browseable = yes
    read only = no
+   guest ok = yes
    directory mask = 0775
    create mask = 0664
    hide dot files = yes
@@ -96,8 +109,10 @@
 [win32_setups]
    comment = Windows Installation Setups
    path = /var/win32
+   guest only = yes
    browseable = yes
    read only = yes
+   guest ok = yes
    directory mask = 0775
    create mask = 0664
    hide dot files = yes
